opengl/glshadermanager: add missing newline

BUG: 479279


(cherry picked from commit ed339de9536aab453701fff3488e0f9ea2f4de91)